WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
ASSIGNED
160773
The jsc shell's Element host constructor should throw if it fails to construct an object.
https://bugs.webkit.org/show_bug.cgi?id=160773
Summary
The jsc shell's Element host constructor should throw if it fails to construc...
Mark Lam
Reported
2016-08-11 11:46:09 PDT
The Element object is a test object provided in the jsc shell for testing use only. JavaScriptCore expects host constructors to either throw an error or return a constructed object. Element has a host constructor that did not obey this contract. As a result, the following statement will fail a RELEASE_ASSERT: new (Element.bind()) We should fix this.
Attachments
proposed patch.
(2.82 KB, patch)
2016-08-11 12:04 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
Fixed tabs.
(2.83 KB, patch)
2016-08-11 12:07 PDT
,
Mark Lam
saam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2016-08-11 11:46:29 PDT
<
rdar://problem/27328608
>
Mark Lam
Comment 2
2016-08-11 12:04:41 PDT
Created
attachment 285840
[details]
proposed patch.
WebKit Commit Bot
Comment 3
2016-08-11 12:05:33 PDT
Attachment 285840
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/ChangeLog:13: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:15: Line contains tab character. [whitespace/tab] [5] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mark Lam
Comment 4
2016-08-11 12:07:35 PDT
Created
attachment 285841
[details]
Fixed tabs.
Mark Lam
Comment 5
2016-08-11 14:24:26 PDT
Thanks for the review. Landed in
r204388
: <
http://trac.webkit.org/r204388
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug